styles.css
body.dark-mode {
    background-color: #181818 !important;
    color: #f1f1f1 !important;
}

.dark-mode .border {
    background: #232323 !important;
    color: #f1f1f1 !important;
    border-color: #444 !important;
}

.dark-mode .bg-light {
    background-color: #232323 !important;
    color: #f1f1f1 !important;
}
/* body{
    background-color: white;
    font-size: medium;
    font-family: 'Times New Roman', Times, serif;
    text-align: justify;
}

h2{
    font-family: times;
    color: #fefefe;
}

#id
{
    border: 4px dotted blue;
    text-align: right;
}

.class
{
    background-color: yellow;
    opacity: 0.7;
} */

